[package]
name = "image-to-palette"
version = "0.1.0"
authors = ["Jaap <hi@mrproper.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.3.0"
serde_json = "1.0.67"
tiny-skia = "0.11.4"
url = "2.2.2"
color-thief = "0.2"
image = "0.24.9"
serde = { version = "1.0", features = ["derive"] }
rgb = "0.8.37"

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
